change tmux keymap

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,7 @@ set -g history-limit 50000
 set -g default-terminal screen-256color
 set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
 
+
 # Send xterm compatible control arrow keys so they work with Vim.
 setw -g xterm-keys on
 
@@ -59,7 +60,7 @@ set -g status-right-length 0
 # Display a clock on the bottom right of the status bar.
 #set -g status-right '%a %Y-%m-%d %H:%M'
 #set -g status-right-length 20
-
+set -g @continuum-restore 'on'
 # -----------------------------------------------------------------------------
 # Key bindings
 # -----------------------------------------------------------------------------
@@ -74,14 +75,14 @@ unbind l
 bind-key r source-file ~/.tmux.conf
 
 # Split panes.
-bind-key j split-window -v
-bind-key l split-window -h
+bind-key sj split-window -v -c "#{pane_current_path}"
+bind-key sl split-window -h -c "#{pane_current_path}"
 
 # Move around panes with ALT + arrow keys.
-bind-key -n M-C-k select-pane -U
-bind-key -n M-C-h select-pane -L
-bind-key -n M-C-j select-pane -D
-bind-key -n M-C-l select-pane -R
+bind-key -n M-k select-pane -U
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-l select-pane -R
 
 
 # Clipboard
@@ -101,6 +102,7 @@ set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-yank'
