--- a/i3status/config
+++ b/i3status/config
@@ -43,7 +43,7 @@ order += "time"
 
 # This is just for display the String "AimerNeige" you can delete it or change it to your own name
 disk "/" {
-    format = "  AimerNeige "
+    format = "  YimingWang "
 }
 
 cpu_usage {
@@ -51,7 +51,7 @@ cpu_usage {
 }
 
 memory {
-    format = "  %used "
+    format = " 󰍛 %used "
 }
 
 battery all {
