--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ set -g history-limit 50000
 # Enable color support inside of tmux.
 set -g default-terminal screen-256color
 set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
+set-option -g default-shell /bin/zsh
 
 
 # Send xterm compatible control arrow keys so they work with Vim.
@@ -83,6 +84,7 @@ bind-key -n M-k select-pane -U
 bind-key -n M-h select-pane -L
 bind-key -n M-j select-pane -D
 bind-key -n M-l select-pane -R
+bind-key a resize-pane -Z \; choose-tree "resize-pane -Z \; select-window -t '%%'"
 
 
 # Clipboard
@@ -106,6 +108,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 # set-option -g display-time 2000
 # set-option -g display-panes-time 2000
 
